<resources>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header"></string>
    <string name="sync_header"></string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Dark mode</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_name">Listen Leaf</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome To ListenLeaf. Please login to continue.</string>
    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="or_spacer">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>